[tool.poetry]
name = "zeropolefilter"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <adityawardianto.19073@mhs.its.ac.id>"]

[tool.poetry.dependencies]
python = "3.9.7"
streamlit = "^1.1.0"
numpy = ">=1.17,<1.21"
plotly = "^5.3.1"
pandas = "^1.3.4"
numba = "^0.54.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
